--- a/src/main/resources/templates/testdb.html
+++ b/src/main/resources/templates/testdb.html
@@ -8,5 +8,9 @@
     <h1>User List</h1>
     <p>아이디(기본키) : <span th:text="${data4.id}"></span></p>
     <p>이름 : <span th:text="${data4.name}"></span></p>
+    <p>아이디(기본키) : <span th:text="${data4.id}"></span></p>
+    <p>이름 : <span th:text="${data4.name}"></span></p>
+    <p>아이디(기본키) : <span th:text="${data4.id}"></span></p>
+    <p>이름 : <span th:text="${data4.name}"></span></p>
 </body>
 </html>
